--- a/project.config.json
+++ b/project.config.json
@@ -41,13 +41,24 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 0,
+			"list": [
+				{
+					"id": -1,
+					"name": "pages/shop/index",
+					"pathName": "pages/shop/index",
+					"scene": null
+				}
+			]
 		}
 	}
 }
