调整新建商圈目录

--- a/app.json
+++ b/app.json
@@ -12,9 +12,9 @@
     "pages/my/person/info",
     "pages/district/detail/person/index",
     "pages/district/detail/shop/index",
-    "pages/newssq/newssq",
     "pages/ssqinfo/ssqinfo",
-    "pages/shop/index"
+    "pages/shop/index",
+    "pages/district/create/create"
   ],
   "window": {
     "backgroundTextStyle": "light",
