商圈入驻：个人及商家页面

--- a/app.json
+++ b/app.json
@@ -13,7 +13,9 @@
     "pages/shop/index",
     "pages/district/create/create",
     "pages/district/detail/detail",
-    "pages/district/join/join"
+    "pages/district/join/join",
+    "pages/district/join/person/person",
+    "pages/district/join/business/business"
   ],
   "window": {
     "backgroundTextStyle": "light",
