--- a/app.json
+++ b/app.json
@@ -14,6 +14,7 @@
     "pages/district/create/create",
     "pages/district/detail/detail",
     "pages/district/join/join",
+    "pages/district/search/search",
     "pages/district/join/person/person",
     "pages/district/join/business/business"
   ],
