--- a/app.json
+++ b/app.json
@@ -17,6 +17,7 @@
     "pages/district/search/search",
     "pages/district/join/person/person",
     "pages/district/join/business/business",
+    "pages/my/product/viewer/viewer",
     "pages/my/product/edit/edit",
     "pages/my/product/new/new"
   ],
