调整商家主页

--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "pages/admin/audit/detail/detail",
     "pages/admin/announcement/publish",
     "pages/my/person/info",
-    "pages/shop/index",
+    "pages/shop/shop",
     "pages/district/create/create",
     "pages/district/detail/detail",
     "pages/district/join/join",
