--- a/app.json
+++ b/app.json
@@ -9,6 +9,7 @@
     "pages/admin/audit/index",
     "pages/admin/audit/ssqapply/ssqapply",
     "pages/admin/audit/busapply/busapply",
+    "pages/admin/audit/perapply/perapply",
     "pages/admin/announcement/publish",
     "pages/my/person/info",
     "pages/shop/shop",
