--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
     "pages/admin/audit/ssqapply/ssqapply",
     "pages/admin/audit/busapply/busapply",
     "pages/admin/audit/perapply/perapply",
+    "pages/admin/audit/imgapply/imgapply",
     "pages/admin/announcement/publish",
     "pages/my/person/info",
     "pages/shop/shop",
