用户管理页面

--- a/app.json
+++ b/app.json
@@ -11,6 +11,7 @@
     "pages/admin/audit/busapply/busapply",
     "pages/admin/audit/perapply/perapply",
     "pages/admin/audit/imgapply/imgapply",
+    "pages/admin/user/index",
     "pages/admin/announcement/publish",
     "pages/my/person/info",
     "pages/shop/shop",
