增加购买商家位页面及相关跳转逻辑

--- a/app.json
+++ b/app.json
@@ -26,6 +26,7 @@
     "pages/my/product/edit/edit",
     "pages/my/product/new/new",
     "pages/ad/record/record",
+    "pages/ad/shop/shop",
     "pages/ad/text/text",
     "pages/ad/image/image"
   ],
