处理首页通知页

--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "pages/index/index",
     "pages/message/message",
     "pages/my/my",
+    "pages/notice/notice",
     "pages/about/about",
     "pages/logs/logs",
     "pages/admin/index",
