--- a/app.json
+++ b/app.json
@@ -36,7 +36,7 @@
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#ff9800",
+    "navigationBarBackgroundColor": "#cf6f00",
     "navigationBarTitleText": "社区商业圈",
     "navigationBarTextStyle": "white"
   },
