--- a/app.json
+++ b/app.json
@@ -35,6 +35,7 @@
     "pages/ad/image/image"
   ],
   "window": {
+    "backgroundColor": "#cf6f00",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#cf6f00",
     "navigationBarTitleText": "社区商业圈",
