--- a/app.json
+++ b/app.json
@@ -34,6 +34,11 @@
     "pages/ad/text/text",
     "pages/ad/image/image"
   ],
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序用于提供就近服务信息"
+    }
+  },
   "window": {
     "backgroundColor": "#cf6f00",
     "backgroundTextStyle": "light",
